Bicycle_Components/main/default/objects/Bicycle__c/Bicycle__c.object-meta.xml
<CustomObject>
    <label>Bicycle</label>
    <nameField>
        <label>Bicycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bicycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>