Bicycle_Components/main/default/objects/Bicycle__c/fields/DX_Field_1__c.field-meta.xml
<CustomField>
    <fullName>DX_Field_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DX Field 1</label>
    <type>Checkbox</type>
</CustomField>