Bicycle_Components/main/default/objects/Bicycle__c/fields/DX_Field_2__c.field-meta.xml
<CustomField>
    <fullName>DX_Field_2__c</fullName>
    <label>DX Field 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>