Bicycle_Components/main/default/objects/Bicycle__c/fields/DX_Test_1__c.field-meta.xml
<CustomField>
    <fullName>DX_Test_1__c</fullName>
    <label>DX Test 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>