Bicycle_Components/main/default/objects/Bicycle__c/fields/DX_Test_2__c.field-meta.xml
<CustomField>
    <fullName>DX_Test_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DX Test 2</label>
    <type>Checkbox</type>
</CustomField>